src/objects/JE_Job_Evaluation__c.object
<CustomObject>
    <fields>
        <fullName>Problem_Solving_Score__c</fullName>
        <formula>CASE( Problem_Solving__c , &quot;Problems are mainly operational and need more analysis. Identify these issues of integration so they can be dealt with at a national level.&quot;, 0.5, &quot;Problems are defined and still mainly operational. However, at this level problems are more challenging and often solutions are critical in delivering company wide strategic objective.&quot;, 1, &quot;Many conditions often require analytical and investigative review. Challenges others to learn from one another.&quot;,1.5, &quot;Thinks beyond existing procedures &amp; policies; uses judgment for solutions for the situation. Requires truly analytical interpretative/evaluative thinking using experience of existing policies &amp; practices to reason through different &amp; varied solutions.&quot;,2.85, &quot;Thinking within a general frame of reference toward functional objectives, in situations with some nebulous, intangible or unstructured aspects.&quot;,3.5,&quot;Positions a business within broadly defined strategy. Involves scanning environment &amp; anticipating impact of external forces, up to a 5-year horizon. Resolves very complex analytical, technical &amp; mgt challenges through interpretation &amp; evaluation.&quot;,5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Problem Solving Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Problem_Solving_Weighted_Score__c</fullName>
        <formula>Problem_Solving_Score__c  *   Problem_Solving_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Problem Solving Weighted Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Problem_Solving_Workflow__c</fullName>
        <label>Problem Solving Workflow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Problem_Solving__c</fullName>
        <label>Problem Solving</label>
        <picklist>
            <picklistValues>
                <fullName>Problems are mainly operational and need more analysis. Identify these issues of integration so they can be dealt with at a national level.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problems are defined and still mainly operational. However, at this level problems are more challenging and often solutions are critical in delivering company wide strategic objective.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Many conditions often require analytical and investigative review. Challenges others to learn from one another.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thinks beyond existing procedures &amp; policies; uses judgment for solutions for the situation. Requires truly analytical interpretative/evaluative thinking using experience of existing policies &amp; practices to reason through different &amp; varied solutions.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thinking within a general frame of reference toward functional objectives, in situations with some nebulous, intangible or unstructured aspects.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positions a business within broadly defined strategy. Involves scanning environment &amp; anticipating impact of external forces, up to a 5-year horizon. Resolves very complex analytical, technical &amp; mgt challenges through interpretation &amp; evaluation.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reporting_Layer_Validation__c</fullName>
        <formula>IF(  Job_Grade_of_Line_Manager_Workflow__c  &gt; UL_Grade_Score__c , &quot;PASS&quot;, &quot;FAIL&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Layer Validation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revised_Grade_Justification__c</fullName>
        <label>Revised Grade Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Revised_Grade__c</fullName>
        <label>Revised Grade</label>
        <picklist>
            <picklistValues>
                <fullName>WL1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reward_Manager__c</fullName>
        <label>Reward Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <label>Role Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size_of_Activation_Per_Weighted_Score__c</fullName>
        <formula>Size_of_Activation_Per_Year_Score__c  *   Size_of_Activation_Per_Year_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Size of Activation Per Weighted Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size_of_Activation_Per_Year_Incr_Comme__c</fullName>
        <label>Size of Activation Per Year Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Size_of_Activation_Per_Year_Incrementa__c</fullName>
        <label>Size of Activation Per Year (increments)</label>
        <picklist>
            <picklistValues>
                <fullName>0-5%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-15%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 20%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Size_of_Activation_Per_Year_Multiplier__c</fullName>
        <formula>Job_Evaluation_Multiplier__r.Size_of_Activation_Per_Year_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Size of Activation Per Year Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size_of_Activation_Per_Year_Score__c</fullName>
        <formula>CASE( Size_of_Activation_Per_Year_Incrementa__c , &quot;0-5%&quot;, 1, &quot;6-10%&quot;, 2, &quot;11-15%&quot;, 3, &quot;16-20%&quot;, 4, &quot;More than 20%&quot;, 5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Size of Activation Per Year Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size_of_Innovations_Per_Year_Comments__c</fullName>
        <label>Size of Innovations Per Year Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Size_of_Innovations_Per_Year_Multiplier__c</fullName>
        <formula>Job_Evaluation_Multiplier__r.Size_of_Innovations_Per_Year_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Size of Innovations Per Year Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size_of_Innovations_Per_Year_Score__c</fullName>
        <formula>CASE( Size_of_Innovations_Per_Year__c , &quot;0-5%&quot;, 1, &quot;6-10%&quot;, 2, &quot;11-15%&quot;,3, &quot;16-20%&quot;,4, &quot;More than 20%&quot;,5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Size of Innovations Per Year Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size_of_Innovations_Per_Year_Weigh_Score__c</fullName>
        <formula>Size_of_Innovations_Per_Year_Score__c * Size_of_Innovations_Per_Year_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Size of Innovations Per Year Weigh Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size_of_Innovations_Per_Year__c</fullName>
        <label>Size of Innovations Per Year</label>
        <picklist>
            <picklistValues>
                <fullName>0-5%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-15%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 20%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strategic_Importance_Comments__c</fullName>
        <label>Strategic Importance Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Strategic_Importance_Multiplier__c</fullName>
        <formula>Job_Evaluation_Multiplier__r.Strategic_Importance_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strategic Importance Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Strategic_Importance_Score__c</fullName>
        <formula>CASE( Strategic_Importance__c , &quot;Low&quot;, 1, &quot;Medium&quot;, 3, &quot;High&quot;, 5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strategic Importance Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Strategic_Importance_Weighted_Score__c</fullName>
        <formula>Strategic_Importance_Score__c  *   Strategic_Importance_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strategic Importance Weighted Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Strategic_Importance__c</fullName>
        <label>Strategic Importance</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Hoizon_Score__c</fullName>
        <formula>CASE( Task_Horizon__c , &quot;Less than 1 year&quot;, 1, &quot;1-2 years&quot;, 2, &quot;2-3 years&quot;, 4, &quot;More than 3 years&quot;, 5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Hoizon Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Horizon_Comments__c</fullName>
        <label>Task Horizon Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Task_Horizon_Multiplier__c</fullName>
        <formula>Job_Evaluation_Multiplier__r.Task_Horizon_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Horizon Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Horizon_Weighted_Score__c</fullName>
        <formula>Task_Hoizon_Score__c  *   Task_Horizon_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Horizon Weighted Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Horizon__c</fullName>
        <label>Task Horizon</label>
        <picklist>
            <picklistValues>
                <fullName>0-1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-2 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-3 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 3 years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Budget_Supported_Comments__c</fullName>
        <label>Total Budget Supported Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Budget_Supported_Multiplier__c</fullName>
        <formula>Job_Evaluation_Multiplier__r.Total_Budget_Supported_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Budget Supported Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Budget_Supported_Score__c</fullName>
        <formula>CASE( Total_Budget_Supported__c , &quot;0-10 m Euros&quot;, 1, &quot;10.1 - 100 m Euros&quot;, 2, &quot;100.1 - 300 m Euros&quot;,3, &quot;300.1 - 600 m Euros&quot;,4, &quot;More than 600 m Euros&quot;,5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Budget Supported Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Budget_Supported_Weighted_Score__c</fullName>
        <formula>Total_Budget_Supported_Score__c * Total_Budget_Supported_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Budget Supported Weighted Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Budget_Supported__c</fullName>
        <label>Total Budget Supported</label>
        <picklist>
            <picklistValues>
                <fullName>0-10 m Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.1 - 100 m Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100.1 - 300 m Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300.1 - 600 m Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 600 m Euros</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Score_01__c</fullName>
        <formula>of_WL2_vs_Total_Pop_Support_Wei_Score__c + Advertising_Promotion_Weighted_Score__c + Change_Weighted_Score__c + Geographic_Scope_Weighted_Score__c + Gross_Margin_Weighted_Score__c + Highest_L_ship_Team_to_S_holder_Wei_Scor__c + Impact_of_The_Decision_Weighted_Score__c + Importance_of_Key_Account_s_Weight_Score__c + indirects_to_Be_Managed_Weighted_Score__c + Influence_in_Decsion_Making_Weight_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Score 01</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Score_02__c</fullName>
        <formula>Level_of_Key_Account_Contact_Weight_Scor__c + No_of_Brands_Weighted_Score__c + No_of_Employees_Managed_Weighted_Score__c + No_of_Factories_Production_Lines_W_Sc__c + No_of_Innovations_Per_Year_Weight_Score__c + No_of_Key_Accounts_Modern_Trade_We_Sc__c + No_of_Platform_Product_Lines_Wei_Score__c + No_of_Project_Activations_Weight_Score__c + No_of_WL1_Supported_Weighted_Score__c + No_of_WL2_Supported_Weighted_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Score 02</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Score_03__c</fullName>
        <formula>Number_of_Direct_Reports_Weighted_Score__c + Number_of_Skip_Level_Reports_Weighted_Sc__c + Number_of_SKU_s_Weighted_Score__c + Overall_Profitability_PBI_Weight_Score__c + Problem_Solving_Weighted_Score__c + Size_of_Activation_Per_Weighted_Score__c + Size_of_Innovations_Per_Year_Weigh_Score__c + Strategic_Importance_Weighted_Score__c + Task_Horizon_Weighted_Score__c + Total_Budget_Supported_Weighted_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Score 03</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Stores_Covered_Modern_Trade_Comm__c</fullName>
        <label>Total Stores Covered (Modern Trade)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Stores_Covered_Modern_Trade_Mult__c</fullName>
        <formula>Job_Evaluation_Multiplier__r.Total_Stores_Covered_Modern_Trade_Mult__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Stores Covered (Modern Trade) Mult</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Stores_Covered_Modern_Trade_Scor__c</fullName>
        <formula>CASE(Total_Stores_Covered_Modern_Trade__c , &quot;0-400&quot;, 1, &quot;401-600&quot;, 2, &quot;601-800&quot;,3, &quot;801-1,000&quot;,4, &quot;More than 1,000&quot;,5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Stores Covered (Modern Trade) Scor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Stores_Covered_Modern_Trade__c</fullName>
        <label>Total Stores Covered (Modern Trade)</label>
        <picklist>
            <picklistValues>
                <fullName>0-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>401-600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>601-800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>801-1,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 1,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Stores_Covered_Modern_Wei_Score__c</fullName>
        <formula>Total_Stores_Covered_Modern_Trade_Scor__c * Total_Stores_Covered_Modern_Trade_Mult__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Stores Covered (Modern) Wei Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Turnover_Direct_Accountability_Comment__c</fullName>
        <label>Turnover (Direct Accountability) Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Turnover_Direct_Accountability_Multipl__c</fullName>
        <formula>Job_Evaluation_Multiplier__r.Turnover_Direct_Accountability_Multipl__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Turnover (Direct Accountability) Multipl</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Turnover_Direct_Accountability_Score__c</fullName>
        <formula>CASE( RecordTypeId , &quot;012E0000000654M&quot;,CASE( Turnover_Direct_Accountability__c , &quot;0 - 30 m Euros&quot;, 1, &quot;30 - 150 m Euros&quot;, 2, &quot;150 - 400 m Euros&quot;, 3, &quot;400 - 800 m euros&quot;, 4, &quot;More than 800 m Euros&quot;, 5,0),
CASE( RecordTypeId , &quot;012E0000000654N&quot;,CASE( Turnover_Direct_Accountability__c , &quot;0 - 100 m Euros&quot;, 1, &quot;101 - 300 m Euros&quot;, 2, &quot;301 - 600 m Euros&quot;, 3, &quot;601 - 800 m Euros&quot;, 4, &quot;More than 800 m Euros&quot;, 5,0),
CASE( RecordTypeId , &quot;012E0000000654O&quot;,CASE( Turnover_Direct_Accountability__c , &quot;0 - 30 m Euros&quot;, 1, &quot;31 - 120 m Euros&quot;, 2, &quot;121 - 350 m Euros&quot;, 3, &quot;351 - 500 m Euros&quot;, 4, &quot;More than 500 m Euros&quot;, 5,0),0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Turnover (Direct Accountability) Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Turnover_Direct_Accountability_Wei_Sco__c</fullName>
        <formula>Turnover_Direct_Accountability_Workflow__c   *   Turnover_Direct_Accountability_Multipl__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Turnover (Direct Accountability) Wei Sco</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Turnover_Direct_Accountability_Workflow__c</fullName>
        <label>Turnover Direct Accountability Workflow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Turnover_Direct_Accountability__c</fullName>
        <label>Turnover (Direct Accountability)</label>
        <picklist>
            <picklistValues>
                <fullName>0 - 30 m Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 - 150 m Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150 - 400 m Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>400 - 800 m Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 800 m Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0 - 100 m Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101 - 300 m Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>301 - 600 m Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>601 - 800 m Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31 - 120 m Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>121 - 350 m Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>351 - 500 m Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 500 m Euros</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Turnover_LM_s_Accountability_Comments__c</fullName>
        <label>Turnover (LM&apos;s Accountability) Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Turnover_LM_s_Accountability_Multiplie__c</fullName>
        <formula>Job_Evaluation_Multiplier__r.Turnover_LM_s_Accountability_Multiplie__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Turnover (LM&apos;s Accountability) Multiplie</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Turnover_LM_s_Accountability_Score__c</fullName>
        <formula>CASE( RecordTypeId , &quot;012E0000000654M&quot;,CASE( Turnover_LM_s_Accountability__c , &quot;0 - 200 m Euros&quot;, 1, &quot;100 - 300 m Euros&quot;, 2, &quot;300 - 600 m Euros&quot;, 3, &quot;600 m to 1 b Euros&quot;, 4, &quot;More than 1 b Euros&quot;, 5,0),
CASE( RecordTypeId , &quot;012E0000000654N&quot;,CASE( Turnover_LM_s_Accountability__c , &quot;0 - 300 m Euros&quot;, 1, &quot;301 - 500 m Euros&quot;, 2, &quot;501 - 800 m Euros&quot;, 3, &quot;801 m - 1b Euros&quot;, 4, &quot;More than 1 b Euros&quot;, 5,0),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Turnover (LM&apos;s Accountability) Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Turnover_LM_s_Accountability_Wei_Score__c</fullName>
        <formula>Turnover_LM_s_Accountability_Workflow__c   *   Turnover_LM_s_Accountability_Multiplie__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Turnover (LM&apos;s Accountability) Wei Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Turnover_LM_s_Accountability_Workflow__c</fullName>
        <label>Turnover LM&apos;s Accountability Workflow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Turnover_LM_s_Accountability__c</fullName>
        <label>Turnover (LM&apos;s Accountability)</label>
        <picklist>
            <picklistValues>
                <fullName>0 - 200 m Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 - 300 m Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300 - 600 m Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>600 m to 1 b Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0 - 300 m Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>301 - 500 m Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>501 - 800 m Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>801 m - 1b Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 1 b Euros</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Turnover_of_Business_Supported_Comments__c</fullName>
        <label>Turnover of Business Supported Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Turnover_of_Business_Supported_Multiplie__c</fullName>
        <formula>Job_Evaluation_Multiplier__r.Turnover_of_Business_Supported_Multiplie__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Turnover of Business Supported Multiplie</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Turnover_of_Business_Supported_Score__c</fullName>
        <formula>CASE( Turnover_of_Business_Supported__c , &quot;0-300 m Euros&quot;,1, &quot;301-600 m Euros&quot;, 2, &quot;600m - 1 B Euros&quot;,4, &quot;More than 1 B Euros&quot;,5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Turnover of Business Supported Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Turnover_of_Business_Supported_Weigh_Sco__c</fullName>
        <formula>Turnover_of_Business_Supported_Score__c * Turnover_of_Business_Supported_Multiplie__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Turnover of Business Supported Weigh Sco</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Turnover_of_Business_Supported__c</fullName>
        <label>Turnover of Business Supported</label>
        <picklist>
            <picklistValues>
                <fullName>0-300 m Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>301-600 m Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>600m - 1 B Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 1 B Euros</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UL_Grade_Score__c</fullName>
        <formula>CASE( RecordTypeId , &quot;012E0000000654M&quot;,CASE( UL_Grade__c  , &quot;2A&quot;, 1, &quot;2B&quot;, 2, &quot;2C&quot;, 3, &quot;3A&quot;, 5, &quot;3B&quot;, 6, &quot;4A&quot;, 8, &quot;4B&quot;, 9,0),
CASE( RecordTypeId , &quot;012E0000000654N&quot;,CASE( UL_Grade__c  , &quot;2A&quot;, 1, &quot;2B&quot;, 2, &quot;2C&quot;, 3, &quot;3A&quot;, 5, &quot;3B&quot;, 6, &quot;4A&quot;, 8, &quot;4B&quot;, 9, &quot;5A&quot;,11, &quot;5B&quot;,12,0),
CASE( RecordTypeId , &quot;012E0000000654O&quot;,CASE( UL_Grade__c  , &quot;2A&quot;, 1, &quot;2B&quot;, 2, &quot;2C&quot;, 3, &quot;3A&quot;, 5, &quot;3B&quot;, 6, &quot;4A&quot;, 8, &quot;4B&quot;, 9, &quot;5A&quot;,11, &quot;5B&quot;,12,0),
CASE( RecordTypeId , &quot;012E0000000654P&quot;,CASE( UL_Grade__c  , &quot;2A&quot;, 1, &quot;2B&quot;, 2, &quot;2C&quot;, 3, &quot;3A&quot;, 5, &quot;3B&quot;, 6, &quot;4A&quot;, 8, &quot;4B&quot;, 9, &quot;5A&quot;,11, &quot;5B&quot;,12,0),
CASE( RecordTypeId , &quot;012E0000000654Q&quot;,CASE( UL_Grade__c  , &quot;2A&quot;, 1, &quot;2B&quot;, 2, &quot;2C&quot;, 3, &quot;3A&quot;, 5, &quot;3B&quot;, 6, &quot;4A&quot;, 8, &quot;4B&quot;, 9, &quot;5A&quot;,11,0),
CASE( RecordTypeId , &quot;012E0000000654R&quot;,CASE( UL_Grade__c  , &quot;2A&quot;, 1, &quot;2B&quot;, 2, &quot;2C&quot;, 3, &quot;3A&quot;, 5, &quot;3B&quot;, 6, &quot;4A&quot;, 8, &quot;4B&quot;, 9, &quot;5A&quot;,11, &quot;5B&quot;,12,0),0))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UL Grade Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UL_Grade__c</fullName>
        <label>UL Grade</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_of_Production_Output_Comments__c</fullName>
        <label>Value of Production Output Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Value_of_Production_Output_Multiplier__c</fullName>
        <formula>Job_Evaluation_Multiplier__r.Value_of_Production_Output_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value of Production Output Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_of_Production_Output_Score__c</fullName>
        <formula>CASE( Value_of_Production_Output__c , &quot;20-90 m Euros&quot;, 1, &quot;91-200 M Euros&quot;, 2, &quot;201-500 m Euros&quot;,3, &quot;501 m - 1 B Euros&quot;,4, &quot;1 B &amp; above&quot;,5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value of Production Output Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_of_Production_Output_Weight_Score__c</fullName>
        <formula>Value_of_Production_Output_Score__c * Value_of_Production_Output_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value of Production Output Weight Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_of_Production_Output__c</fullName>
        <label>Value of Production Output</label>
        <picklist>
            <picklistValues>
                <fullName>20-90 m Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>91-200 M Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201-500 m Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>501 m - 1 B Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 B &amp; above</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WL_of_Line_Manager_Comments__c</fullName>
        <label>WL of Line Manager Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>